# python-tesseract

./: ClassTesseract.md  CodeSnippets.md  HowToCompile.md  HowToCompileForCentos.md  HowToCompileForCygwin.md  HowToCompileForFedora.md  HowToCompileForHomebrewMac.md  HowToCompileForMacportMac.md  HowToInstallCompiledCygwin.md  HowToInstallDeb.md  ListOfFunctionsNotSwigged.md  ProjectHome.md  Python3Tesseract.md  README.md  config.h  config.py  config2.h  current  cv_original.cpp  jbuild  jcommit  main.cpp  main.h  main_dummy.cpp  main_dummy.h  ms_fmemopen.c  python-tesseract_0.9-0.2ubuntu4.dsc  python-tesseract_0.9-0.2ubuntu4_amd64.build  python-tesseract_0.9-0.2ubuntu5.dsc  python-tesseract_0.9-0.2ubuntu7_amd64.build  python-tesseract_0.9-0.2ubuntu7_amd64.changes  python-tesseract_0.9-0.2ubuntu7_amd64.deb  python-tesseract_0.9-0.2ubuntu8.dsc  python-tesseract_0.9-0.2ubuntu8_amd64.build  python-tesseract_0.9-0.2ubuntu8_amd64.changes  python-tesseract_0.9-0.2ubuntu8_amd64.deb  python-tesseract_0.9-0.3ubuntu0_amd64.changes  python-tesseract_0.9-0.3ubuntu0_amd64.deb  python-tesseract_0.9-0.3ubuntu1.dsc  python-tesseract_0.9-0.3ubuntu1_amd64.changes  (+15 more)
debian/: changelog  files  python-tesseract.substvars
debianPatches/: rules
patches/: SetCVImage.patch  tesseract_sm.patch
pytest/: setup.py  spam.c  test.py
python-tesseract-0.5/: config.h  config.h.in~  config.py  config.status  configure  configure.in  configure.scan  main_dummy.cpp  setup.py  tesseract_wrap.cpp
python-tesseract-0.5/autom4te.cache/: output.0  requests  traces.0
python-tesseract-0.5/deb_dist/: python-tesseract_0.5-1.1.dsc  python-tesseract_0.5-1.1_amd64.build  python-tesseract_0.5-1.1_amd64.changes  python-tesseract_0.5-1.1_amd64.deb  python-tesseract_0.5-1.dsc
python-tesseract-0.5/deb_dist/python-tesseract-0.5/: cleanall  setup.py  tesseract_wrap.cpp
python-tesseract-0.5/deb_dist/python-tesseract-0.5/debian/: changelog  control  files
python-tesseract-0.5/deb_dist/python-tesseract-0.5/debian/python-tesseract/DEBIAN/: control  md5sums
python-tesseract-0.5/deb_dist/python-tesseract-0.5/debian/python-tesseract/usr/share/pyshared/: python_tesseract-0.5.egg-info
python-tesseract-0.5/deb_dist/python-tesseract-0.5/debian/python-tesseract/usr/share/python-support/: python-tesseract.public
python-tesseract-0.5/debian/: changelog  copyright  rules
python-tesseract-0.5/debianPatches/: control
python-tesseract-0.6/: buildDeb  setup.py
python-tesseract-0.7.1/: buildCygwinDLL  output
python-tesseract-0.7.2/: main_dummy.cpp  main_dummy.h  setup_py_patch  tesseract.i  tesseract_wrap.cpp
python-tesseract-0.7.4/: config.h  config.py  main_dummy.h  main_dummy2.cpp
python-tesseract-0.9/: setup.log.full  setup.py
python-tesseract-r444/: ag5_fmemopen.c  buildWinInst.bat  compile_test_cv_cpp  test_.py  util-fmemopen.cpp  util-fmemopen.h
python.egg-info/: SOURCES.txt
python_tesseract.egg-info/: PKG-INFO  SOURCES.txt
src/: ChangeLog  allheaders_mini.h  baseapi_mini.h  baseapi_mini_darwin.h  capi_mini.h  config.h  config.status  jfunc.py  ltrresultiterator_mini.h  main.cpp  main.h  patchEngine.py  patcher.py  setExec.py  setenvWin32.bat  setup.py  (+11 more)
(+730 files in other folders)
