#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([python-tesseract], [0.5], [freetogo@gmail.com])
AC_CONFIG_SRCDIR([main_dummy.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# autoheader templates
AH_TEMPLATE([OSNAME], Define os.)
AH_TEMPLATE([X64], Define this if you are under an X64-based operating system.)
AH_TEMPLATE([X86], Define this if you are under an X86-based 32bit operating system.)
  AH_TEMPLATE(__linux__,[for OmniORB on Linux, Cygwin])
  AH_TEMPLATE(__sunos__,[for OmniORB on SunOS (Solaris)])
  AH_TEMPLATE(__osf1__,[for OmniORB on OSF1 (Tru64)])
  AH_TEMPLATE(__hpux__,[for OmniORB on HPUX])
  AH_TEMPLATE(__nextstep__,[for OmniORB on NextStep])
  AH_TEMPLATE(__irix__,[for OmniORB on IRIX])
  AH_TEMPLATE(__aix__,[for OmniORB on AIX])
  AH_TEMPLATE(__darwin__,[for OmniORB on Darwin])
  AH_TEMPLATE(__freebsd__,[for OmniORB on FreeBSD])
  AH_TEMPLATE(__osr5__,[for OmniORB on OSR5])
# Determine the operating system
AC_MSG_CHECKING([uname -s for detecting host operating system])
OSNAME=`uname -s`
AC_DEFINE(OSNAME)
case "$OSNAME" in
        FreeBSD*)
                dnl FreeBSD Owns !
                AC_MSG_RESULT(FreeBSD Owns your hd)
                FREEBSD=yes
        ;;
        DragonFly*)
                dnl DragonFlyBSD OMG, it works? 
                AC_MSG_RESULT(DragonFlyBSD Rocks)
                DRAGONFLY=yes
        ;;
        Linux*)
                dnl Linux...
                AC_MSG_RESULT(Linux)
                LINUX=yes
                AC_SUBST(OSNAME,"__linux__")
        ;;
        Darwin*)
                dnl Darwin owns to (includes BSD) :P
                AC_MSG_RESULT(Darwin)
                FREEBSD=yes
        ;;
        *)
                AC_MSG_RESULT(no)
        ;;
esac
AC_MSG_CHECKING([uname -m for detecting host operating system architecture])
ARCH=`uname -m`
case "$ARCH" in
        amd64*)
                dnl yay 21st century hardware
                AC_MSG_RESULT(x64 feel teh power)
                AC_DEFINE(X64)
                AC_SUBST(ARCH,x64)
        ;;
        x86_64*)
                dnl yay 21st century hardware
                AC_MSG_RESULT(x64 feel teh power)
                AC_DEFINE(X64)
                AC_SUBST(ARCH,x64)
        ;;
        *)
                AC_MSG_RESULT(x86 oh noes i ran out of address space)
                AC_DEFINE(X86)
                AC_SUBST(ARCH,x86)
        ;;
esac

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h inttypes.h libintl.h limits.h locale.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_RESTRICT
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor memset setlocale strdup strrchr strstr])

AC_OUTPUT
